crates/mun_hir/src/ty/snapshots/mun_hir__ty__tests__infer_call_method.snap
---
source: crates/mun_hir/src/ty/tests.rs
expression: "infer(r#\"\n    struct Foo {}\n\n    impl Foo {\n        fn with_self(self) -> Self {\n            self\n        }\n    }\n\n    fn main() {\n        let a = Foo {};\n        a.with_self();\n    }\n    \"#)"
---
91..133 '{     ...f(); }': ()
101..102 'a': Foo
105..111 'Foo {}': Foo
117..118 'a': Foo
117..130 'a.with_self()': Foo
43..47 'self': Foo
57..77 '{     ...     }': Foo
67..71 'self': Foo
