crates/mun_hir/src/ty/snapshots/mun_hir__ty__tests__infer_literals.snap
---
source: crates/mun_hir/src/ty/tests.rs
expression: "fn integer() -> i32 {\n        0\n    }\n\n    fn large_unsigned_integer() -> u128 {\n        0\n    }\n\n    fn with_let() -> u16 {\n        let b = 4;\n        let a = 4;\n        a\n    }"
---
[20; 37) '{     ...     }': i32
[30; 31) '0': i32
[79; 96) '{     ...     }': u128
[89; 90) '0': u128
[123; 178) '{     ...     }': u16
[137; 138) 'b': i32
[141; 142) '4': i32
[156; 157) 'a': u16
[160; 161) '4': u16
[171; 172) 'a': u16
