crates/mun_hir/src/ty/snapshots/mun_hir__ty__tests__infer_suffix_literals.snap
---
source: crates/mun_hir/src/ty/tests.rs
expression: "fn main(){\n    123;\n    123u8;\n    123u16;\n    123u32;\n    123u64;\n    123u128;\n    1_000_000_u32;\n    123i8;\n    123i16;\n    123i32;\n    123i64;\n    123i128;\n    1_000_000_i32;\n    1_000_123.0e-2;\n    1_000_123.0e-2f32;\n    1_000_123.0e-2f64;\n    9999999999999999999999999999999999999999999_f64;\n}\n\nfn add(a:u32) -> u32 {\n    a + 12u32\n}\n\nfn errors() {\n    0b22222; // invalid literal\n    0b00010_f32; // non-10 base f64\n    0o71234_f32; // non-10 base f64\n    1234_foo; // invalid suffix\n    1234.0_bar; // invalid suffix\n    9999999999999999999999999999999999999999999; // too large\n    256_u8; // literal out of range for `u8`\n    128_i8; // literal out of range for `i8`\n    12712371237123_u32; // literal out of range `u32`\n    9999999999999999999999999; // literal out of range `i32`\n}"
---
358..365: invalid literal value
390..401: binary float literal is not supported
426..437: octal float literal is not supported
462..470: invalid suffix `foo`
494..504: invalid suffix `bar`
528..571: int literal is too large
590..596: literal out of range for `u8`
635..641: literal out of range for `i8`
680..698: literal out of range for `u32`
734..759: literal out of range for `i32`
9..298 '{     ...f64; }': ()
15..18 '123': i32
24..29 '123u8': u8
35..41 '123u16': u16
47..53 '123u32': u32
59..65 '123u64': u64
71..78 '123u128': u128
84..97 '1_000_000_u32': u32
103..108 '123i8': i8
114..120 '123i16': i16
126..132 '123i32': i32
138..144 '123i64': i64
150..157 '123i128': i128
163..176 '1_000_000_i32': i32
182..196 '1_000_123.0e-2': f64
202..219 '1_000_...e-2f32': f32
225..242 '1_000_...e-2f64': f64
248..295 '999999...99_f64': f64
307..308 'a': u32
321..338 '{     ...2u32 }': u32
327..328 'a': u32
327..336 'a + 12u32': u32
331..336 '12u32': u32
352..792 '{     ...i32` }': ()
358..365 '0b22222': i32
390..401 '0b00010_f32': f32
426..437 '0o71234_f32': f32
462..470 '1234_foo': i32
494..504 '1234.0_bar': f64
528..571 '999999...999999': i32
590..596 '256_u8': u8
635..641 '128_i8': i8
680..698 '127123...23_u32': u32
734..759 '999999...999999': i32
